doc: add previous blogs

--- a/themes/arknights/_config.yml
+++ b/themes/arknights/_config.yml
@@ -1,6 +1,12 @@
 # html lang
 language: zh
 
+# 图标
+favicon:
+  small: images/jerry.png
+  #medium: /images/favicon-32x32-next.png
+  medium: images/jerry.png
+
 # canvas 动态背景
 canvas_dust: true
 
@@ -11,7 +17,7 @@ aside:
   dr: / # 侧边栏 Dr. 链接
   block_in_top: false # 目前为侧边栏文章目录置顶
   copyright: # 版权声明、备案号等
-    ©: 1970 to 2020
+    ©: 1970 to 9999
     ICP: ——备案号——
 
 # post 文章页面配置；true / false
@@ -19,7 +25,7 @@ post:
   date: true # 是否显示发布日期
   updated: true # 是否显示修改日期
   source: false # 是否显示源文件路径
-  excerpt: false # 是否在文章中显示摘要内容（<!-- more--> 以上的内容）
+  excerpt: true # 是否在文章中显示摘要内容（<!-- more--> 以上的内容）
   reward: true # 文章末显示打赏二维码
 # 文章内目录
 toc:
@@ -33,18 +39,19 @@ archives:
 
 # Valine 无后端评论系统
 valine:
-  app_id: # <APP ID>
-  app_key: # <APP KEY>
+  app_id: W0Y9YCi6j30MgJlvg32vrRv1-gzGzoHsz # <APP ID>
+  app_key: Cm6n1aD1AJ4vD2tO8zgcQJRC # <APP KEY>
 
 # 图表支持
-mermaid: false
+mermaid: true
 
 # main menu navigation
 menu:
   Home: ''
-#  About: about/
-#  Contact: contact/
+  About: about/
+  # Contact: contact/
   Archives: archives/
+  Monitor: monitor/
 
 # stylesheets loaded in the <head>
 stylesheets:
