--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: Jerrio's Blog
 subtitle: ''
 description: ''
 keywords:
-author: 张之锐 Jerry Zhang  
+author: Jerrio
 language: en
 timezone: ''
 
