--- a/themes/arknights/_config.yml
+++ b/themes/arknights/_config.yml
@@ -3,9 +3,9 @@ language: zh
 
 # 图标
 favicon:
-  small: images/jerry.png
+  small: /img/logo2.png
   #medium: /images/favicon-32x32-next.png
-  medium: images/jerry.png
+  medium: /img/logo2.png
 
 # canvas 动态背景
 canvas_dust: true
@@ -13,7 +13,7 @@ canvas_dust: true
 # 侧边栏
 aside:
   in_left: false # 侧边栏在左 true / false
-  logo: https://ak.hypergryph.com/assets/index/images/ak/pc/faction/1.png #图片链接，建议 1:1 比例
+  logo: /img/logo2.png #图片链接，建议 1:1 比例
   dr: / # 侧边栏 Dr. 链接
   block_in_top: false # 目前为侧边栏文章目录置顶
   copyright: # 版权声明、备案号等
@@ -25,7 +25,7 @@ post:
   date: true # 是否显示发布日期
   updated: true # 是否显示修改日期
   source: false # 是否显示源文件路径
-  excerpt: true # 是否在文章中显示摘要内容（<!-- more--> 以上的内容）
+  excerpt: false # 是否在文章中显示摘要内容（<!-- more--> 以上的内容）
   reward: true # 文章末显示打赏二维码
 # 文章内目录
 toc:
