--- a/_config.yml
+++ b/_config.yml
@@ -88,6 +88,21 @@ updated_option: 'mtime'
 per_page: 10
 pagination_dir: page
 
+# Search functoin
+search:
+  path: search.xml
+  field: post
+  content: true
+  format: html
+
+# Counter Service
+leancloud_counter_security:
+  enable_sync: true
+  app_id: W0Y9YCi6j30MgJlvg32vrRv1-gzGzoHsz
+  app_key: Cm6n1aD1AJ4vD2tO8zgcQJRC
+  username: jerrio20@outlook.com # Will be asked while deploying if is left blank
+  password: <your password> # Recommmended to be left blank. Will be asked while deploying if is left blank
+
 # Include / Exclude file(s)
 ## include:/exclude: options only apply to the 'source/' folder
 include:
@@ -97,7 +112,7 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: arknights
+theme: next
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
